--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,174 +1,44 @@
-server {
-    listen 80;
-    listen [::]:80;
+worker_processes auto;
+pid /home/container/tmp/nginx.pid;
+daemon off;
 
-    root /var/www/your_domain.com/html;
-    index index.html index.htm index.nginx-debian.html;
+events {
+	worker_connections 768;
+	# multi_accept on;
+}
 
-    server_name your_domain.com www.your_domain.com;
-    
-    client_max_body_size 128M;
+error_log /home/container/logs/error.log;
+error_log /dev/stdout;
 
-    location ~ (^|/)(apps/main|apps/dashboard-legacy|apps/install|apps/update)/private(/|$) {
-        return 403;
-    }
+http {
+	sendfile on;
+	tcp_nopush on;
+	tcp_nodelay on;
+	keepalive_timeout 65;
+	types_hash_max_size 2048;
 
-    location ~ \.(ini|log|sh|sql|htaccess) {
-        deny all;
-    }
+	include /home/container/nginx/mime.types;
+	default_type application/octet-stream;
 
-    location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
-    }
+	proxy_temp_path /home/container/tmp;
+	client_body_temp_path /home/container/tmp;
+	fastcgi_temp_path /home/container/tmp;
+	uwsgi_temp_path /home/container/tmp;
+	scgi_temp_path /home/container/tmp;
 
-    error_page 404 /apps/main/index.php?route=404;
-    error_page 403 /apps/main/index.php?route=404;
+	ssl_protocols TLSv1 TLSv1.1 TLSv1.2; # Dropping SSLv3, ref: POODLE
+	ssl_prefer_server_ciphers on;
 
-    location ~ "(^|/)(apps/main|apps/dashboard-legacy|apps/install|apps/update)/private(/|$)" {
-        deny all;
-    }
-    location ~ "(^|/)apps/main/themes/(.*)/private(/|$)" {
-        deny all;
-    }
-    location ~ "(^|/)apps/main/themes/(.*)/theme.json(/|$)" {
-        deny all;
-    }
+	#ssl_certificate /path/to/your/key/fullchain.pem;
+    #ssl_certificate_key /path/to/your/key/privkey.pem;
 
-    location ~ "(^|/)apps/(dashboard|api)(?!/public)(/?)" {
-        return 403;
-    }
+	access_log /home/container/logs/access.log;
+	access_log /dev/stdout;
+	error_log /home/container/logs/error.log;
+	error_log /dev/stdout;
 
-    rewrite ^/robots.txt(/?)$ /robots.php last;
-    rewrite ^/sitemap.xml(/?)$ /sitemap.php last;
-    rewrite ^/install(/?)$ /apps/install/index.php last;
-    rewrite ^/(/?)$ /apps/main/index.php?route=home last;
-    rewrite ^/rules(/?)$ /apps/main/index.php?route=rules last;
-    rewrite ^/staff(/?)$ /apps/main/index.php?route=staff last;
-    rewrite ^/vote(/?)$ /apps/main/index.php?route=vote last;
-    rewrite ^/download(/?)$ /apps/main/index.php?route=download last;
-    rewrite ^/download/([0-9]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=download&id=$1&file=$2 last;
-    rewrite ^/player/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=player&id=$1 last;
-    rewrite ^/profile(/?)$ /apps/main/index.php?route=profile&target=profile&action=get last;
-    rewrite ^/profile/edit(/?)$ /apps/main/index.php?route=profile&target=profile&action=update last;
-    rewrite ^/profile/contact(/?)$ /apps/main/index.php?route=profile&target=profile&action=contact last;
-    rewrite ^/profile/change-password(/?)$ /apps/main/index.php?route=profile&target=profile&action=change-password last;
-    rewrite ^/login(/?)$ /apps/main/index.php?route=login last;
-    rewrite ^/register(/?)$ /apps/main/index.php?route=register last;
-    rewrite ^/recover-account(/?)$ /apps/main/index.php?route=recover last;
-    rewrite ^/recover-account/([0-9a-zA-Z-_]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=recover&id=$1&token=$2 last;
-    rewrite ^/email-verification(/?)$ /apps/main/index.php?route=email-verification last;
-    rewrite ^/email-verification/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=email-verification&token=$1 last;
-    rewrite ^/verify(/?)$ /apps/main/index.php?route=tfa last;
-    rewrite ^/recover-verify(/?)$ /apps/main/index.php?route=tfa-recover last;
-    rewrite ^/recover-verify/([0-9a-zA-Z-_]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=tfa-recover&id=$1&token=$2 last;
-    rewrite ^/logout(/?)$ /apps/main/public/ajax/logout.php last;
-    rewrite ^/credit/buy(/?)$ /apps/main/index.php?route=credit&target=credit&action=buy last;
-    rewrite ^/credit/buy/success(/?)$ /apps/main/index.php?route=credit&target=credit&action=alert&result=success last;
-    rewrite ^/credit/buy/error(/?)$ /apps/main/index.php?route=credit&target=credit&action=alert&result=error last;
-    rewrite ^/credit/send(/?)$ /apps/main/index.php?route=credit&target=credit&action=send last;
-    rewrite ^/credit/send/([0-9]+)(/?)$ /apps/main/index.php?route=credit&target=credit&action=send&id=$1 last;
-    rewrite ^/auth(/?)$ /apps/main/public/ajax/auth.php last;
-    rewrite ^/discord/login(/?)$ /apps/main/public/ajax/discord-login.php last;
-    rewrite ^/discord/link(/?)$ /apps/main/public/ajax/discord-link.php last;
-    rewrite ^/discord/unlink(/?)$ /apps/main/public/ajax/discord-unlink.php last;
-    rewrite ^/manual-payment/([0-9]+)(/?)$ /apps/main/index.php?route=manual-payment&id=$1 last;
-    rewrite ^/callback/([0-9a-zA-Z-_]+)(/?)$ /apps/main/public/ajax/process.php?api=$1 last;
-    rewrite ^/islem/([0-9a-zA-Z-_]+)(/?)$ /apps/main/public/ajax/process.php?api=$1 last;
-    rewrite ^/leaderboards(/?)$ /apps/main/index.php?route=leaderboards last;
-    rewrite ^/leaderboards/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=leaderboards&server=$1 last;
-    rewrite ^/store(/?)$ /apps/main/index.php?route=store&action=getAll last;
-    rewrite ^/store/products/([0-9]+)(/?)$ /apps/main/index.php?route=store&action=get&product=$1 last;
-    rewrite ^/store/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=store&action=get&category=$1 last;
-    rewrite ^/support(/?)$ /apps/main/index.php?route=support&target=support&action=getAll last;
-    rewrite ^/support/create(/?)$ /apps/main/index.php?route=support&target=support&action=insert last;
-    rewrite ^/support/view/([0-9]+)(/?)$ /apps/main/index.php?route=support&target=support&action=get&id=$1 last;
-    rewrite ^/support/delete/([0-9]+)(/?)$ /apps/main/index.php?route=support&target=support&action=delete&id=$1 last;
-    rewrite ^/blog/([0-9]+)(/?)$ /apps/main/index.php?route=home&page=$1 last;
-    rewrite ^/categories/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=home&category=$1 last;
-    rewrite ^/categories/([0-9a-zA-Z-_]+)/([0-9]+)(/?)$ /apps/main/index.php?route=home&category=$1&page=$2 last;
-    rewrite ^/tags/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=home&tag=$1 last;
-    rewrite ^/tags/([0-9a-zA-Z-_]+)/([0-9]+)(/?)$ /apps/main/index.php?route=home&tag=$1&page=$2 last;
-    rewrite ^/posts/([0-9]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=news&id=$1 last;
-	rewrite ^/blog/categories/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=home&category=$1 last;
-    rewrite ^/blog/categories/([0-9a-zA-Z-_]+)/([0-9]+)(/?)$ /apps/main/index.php?route=home&category=$1&page=$2 last;
-    rewrite ^/blog/tags/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=home&tag=$1 last;
-    rewrite ^/blog/tags/([0-9a-zA-Z-_]+)/([0-9]+)(/?)$ /apps/main/index.php?route=home&tag=$1&page=$2 last;
-    rewrite ^/blog/posts/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=news&id=$1 last;
-    rewrite ^/pages/([0-9]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=page&id=$1 last;
-    rewrite ^/maintenance(/?)$ /apps/main/index.php?route=maintenance last;
-    rewrite ^/games(/?)$ /apps/main/index.php?route=games&action=getAll last;
-    rewrite ^/games/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=games&action=get&game=$1 last;
-    rewrite ^/help(/?)$ /apps/main/index.php?route=help&action=getAll last;
-    rewrite ^/help/articles/([0-9]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=help&action=getArticle&id=$1 last;
-    rewrite ^/help/topics/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=help&action=getTopic&category=$1 last;
-    rewrite ^/chest(/?)$ /apps/main/index.php?route=chest&target=chest&action=getAll last;
-    rewrite ^/chest/gift/([0-9]+)(/?)$ /apps/main/index.php?route=chest&target=chest&action=gift&id=$1 last;
-    rewrite ^/gift(/?)$ /apps/main/index.php?route=gift&target=gift&action=coupon last;
-    rewrite ^/gift/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=gift&target=gift&action=use&id=$1 last;
-    rewrite ^/fortune-wheel(/?)$ /apps/main/index.php?route=lottery last;
-    rewrite ^/fortune-wheel/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=lottery&lottery=$1 last;
-    rewrite ^/play(/?)$ /apps/main/index.php?route=play last;
-    rewrite ^/form/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=form&action=view&form=$1 last;
-    rewrite ^/form/view/([0-9]+)(/?)$ /apps/main/index.php?route=form&action=get&id=$1 last;
-    rewrite ^/help-bazaar(/?)$ /apps/main/index.php?route=manage-bazaar&action=help last;
-    rewrite ^/manage-bazaar(/?)$ /apps/main/index.php?route=manage-bazaar&action=getAll last;
-    rewrite ^/manage-bazaar/([0-9]+)(/?)$ /apps/main/index.php?route=manage-bazaar&action=sell&id=$1 last;
-    rewrite ^/bazaar(/?)$ /apps/main/index.php?route=bazaar&action=getAll last;
-    rewrite ^/bazaar/products/([0-9]+)(/?)$ /apps/main/index.php?route=bazaar&action=get&product=$1 last;
-    rewrite ^/bazaar/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=bazaar&action=get&server=$1 last;
-    rewrite ^/orders/view/([0-9]+)(/?)$ /apps/main/index.php?route=orders&action=get&id=$1 last;
-    rewrite ^/orders/success(/?)$ /apps/main/index.php?route=orders&action=alert&result=success last;
-    rewrite ^/orders/error(/?)$ /apps/main/index.php?route=orders&action=alert&result=error last;
-    rewrite ^/gaming-night(/?)$ /apps/main/index.php?route=gaming-night last;
-    rewrite ^/gaming-night/products/([0-9]+)(/?)$ /apps/main/index.php?route=gaming-night&action=get&product=$1 last;
-    rewrite ^/forum(/?)$ /apps/main/index.php?route=forum&target=categories&action=getAll last;
-    rewrite ^/forum/categories/([0-9]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=forum&target=categories&action=get&id=$1 last;
-    rewrite ^/forum/categories/([0-9]+)/([0-9a-zA-Z-_]+)/([0-9]+)(/?)$ /apps/main/index.php?route=forum&target=categories&action=get&id=$1&page=$3 last;
-    rewrite ^/forum/threads/edit/([0-9]+)(/?)$ /apps/main/index.php?route=forum&target=threads&action=update&id=$1 last;
-    rewrite ^/forum/threads/pin/([0-9]+)(/?)$ /apps/main/index.php?route=forum&target=threads&action=pin&id=$1 last;
-    rewrite ^/forum/threads/lock/([0-9]+)(/?)$ /apps/main/index.php?route=forum&target=threads&action=lock&id=$1 last;
-    rewrite ^/forum/threads/delete/([0-9]+)(/?)$ /apps/main/index.php?route=forum&target=threads&action=delete&id=$1 last;
-    rewrite ^/forum/threads/create(/?)$ /apps/main/index.php?route=forum&target=threads&action=insert last;
-    rewrite ^/forum/threads/([0-9]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=forum&target=threads&action=get&id=$1 last;
-    rewrite ^/forum/replies/edit/([0-9]+)(/?)$ /apps/main/index.php?route=forum&target=replies&action=update&id=$1 last;
-    rewrite ^/forum/replies/delete/([0-9]+)(/?)$ /apps/main/index.php?route=forum&target=replies&action=delete&id=$1 last;
-    rewrite ^/punishments(/?)$ /apps/main/index.php?route=punishments&target=home last;
-    rewrite ^/punishments/bans(/?)$ /apps/main/index.php?route=punishments&target=bans&action=getAll last;
-    rewrite ^/punishments/mutes(/?)$ /apps/main/index.php?route=punishments&target=mutes&action=getAll last;
-    rewrite ^/punishments/kicks(/?)$ /apps/main/index.php?route=punishments&target=kicks&action=getAll last;
-    rewrite ^/punishments/warnings(/?)$ /apps/main/index.php?route=punishments&target=warnings&action=getAll last;
-    rewrite ^/suggestions(/?)$ /apps/main/index.php?route=suggestions&target=suggestion&action=getAll last;
-    rewrite ^/suggestions/create(/?)$ /apps/main/index.php?route=suggestions&target=suggestion&action=insert last;
-    rewrite ^/suggestions/like/([0-9]+)(/?)$ /apps/main/index.php?route=suggestions&target=suggestion&action=like&id=$1 last;
-    rewrite ^/suggestions/dislike/([0-9]+)(/?)$ /apps/main/index.php?route=suggestions&target=suggestion&action=dislike&id=$1 last;
-    rewrite ^/suggestions/edit/([0-9]+)(/?)$ /apps/main/index.php?route=suggestions&target=suggestion&action=update&id=$1 last;
-    rewrite ^/suggestions/delete/([0-9]+)(/?)$ /apps/main/index.php?route=suggestions&target=suggestion&action=delete&id=$1 last;
-    rewrite ^/suggestions/([0-9]+)/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=suggestions&target=suggestion&action=get&id=$1 last;
-    rewrite ^/suggestions/categories/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=suggestions&target=category&action=get&slug=$1 last;
-    rewrite ^/suggestions/replies/edit/([0-9]+)(/?)$ /apps/main/index.php?route=suggestions&target=reply&action=update&id=$1 last;
-    rewrite ^/suggestions/replies/delete/([0-9]+)(/?)$ /apps/main/index.php?route=suggestions&target=reply&action=delete&id=$1 last;
-    rewrite ^/404(/?)$ /apps/main/index.php?route=404 last;
-    rewrite ^/checkout(/?)$ /apps/main/index.php?route=checkout last;
-	rewrite ^/tebex/webhook(/?)$ /apps/main/public/ajax/tebex-webhook.php last;
-    rewrite ^/applications/forms/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=application&action=apply&form=$1 last;
-    rewrite ^/applications/([0-9]+)(/?)$ /apps/main/index.php?route=application&action=get&id=$1 last;
+	gzip on;
+	gzip_disable "msie6";
 
-    rewrite ^/OneSignalSDKWorker.js$ /apps/dashboard/public/assets/js/OneSignalSDKWorker.js last;
-    rewrite ^/OneSignalSDKUpdaterWorker.js$ /apps/dashboard/public/assets/js/OneSignalSDKUpdaterWorker.js last;
-
-    location /api {
-        try_files $uri $uri/ /apps/api/public/index.php?$args;
-    }
-    
-    location ~* ^/dashboard/assets/(.+)\.(\d+)\.(js|css|png|jpg|jpeg|gif)$ {
-        try_files /apps/dashboard/public/assets/$1.$3 =404;
-    }
-    location /dashboard {
-        try_files $uri $uri/ /apps/dashboard/public/index.php?$query_string;
-    }
-
-    location / {
-        rewrite ^/([0-9a-zA-Z-_]+)(/?)$ /apps/main/index.php?route=page&slug=$1 last;
-    }
+	include /home/container/nginx/conf.d/*.conf;
 }
