--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -9,7 +9,11 @@ server {
     index /apps/main/public/index.php;
     charset utf-8;
 
-    location = /favicon.ico { access_log off; log_not_found off; }
+    location = /favicon.ico {
+        access_log off;
+        log_not_found off;
+        rewrite ^ /apps/main/public/favicon.png last;
+    }
     location = /robots.txt  { access_log off; log_not_found off; }
     # allow larger file uploads and longer script runtimes
     client_max_body_size 128M;
@@ -37,10 +41,6 @@ server {
     }
 
     # leaderos routes
-    location = /favicon.ico {
-        rewrite ^ /apps/main/public/favicon.png last;
-    }
-
     location ~* \.(ini|log|sh|sql|htaccess)$ {
         deny all;
     }
