--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -59,12 +59,12 @@ server {
     }
 
     # Dashboard Assets (cached)
-    location ~* ^/dashboard/assets/(.+)\.(\d+)\.(js|css|png|jpg|gif|ico|ttf|eot|svg|woff|woff2)$ {
+    location ~* ^/dashboard/assets/(.+)\.(\d+)\.(js|css|png|jpeg|jpg|webp|svg|gif|ico|mp3|mp4|json|ttf|eot|woff|woff2)$ {
         try_files /apps/dashboard/public/assets/$1.$3 =404;
     }
 
     # Dashboard Assets direct access
-    location ~ ^/dashboard/assets/(.+)\.(js|css|png|jpg|gif|ico|mp3|mp4|json|ttf|eot|svg|woff|woff2)$ {
+    location ~ ^/dashboard/assets/(.+)\.(js|css|png|jpeg|jpg|webp|svg|gif|ico|mp3|mp4|json|ttf|eot|woff|woff2)$ {
         try_files $uri /apps/dashboard/public/assets/$1.$2;
     }
 
@@ -74,12 +74,12 @@ server {
     }
 
     # Theme Assets (cached)
-    location ~* ^/assets/([0-9a-zA-Z-_]+)/(.+)\.(\d+)\.(js|css|png|jpg|gif|ico|mp3|mp4|json|ttf|eot|svg|woff|woff2)$ {
+    location ~* ^/assets/([0-9a-zA-Z-_]+)/(.+)\.(\d+)\.(js|css|png|jpeg|jpg|webp|svg|gif|ico|mp3|mp4|json|ttf|eot|woff|woff2)$ {
         try_files /apps/main/app/views/themes/$1/assets/$2.$4 =404;
     }
 
     # Theme Assets direct access
-    location ~ ^/assets/([0-9a-zA-Z-_]+)/(.+)\.(js|css|png|jpg|gif|ico|mp3|mp4|json|ttf|eot|svg|woff|woff2)$ {
+    location ~ ^/assets/([0-9a-zA-Z-_]+)/(.+)\.(js|css|png|jpeg|jpg|webp|svg|gif|ico|mp3|mp4|json|ttf|eot|woff|woff2)$ {
         try_files /apps/main/app/views/themes/$1/assets/$2.$3 =404;
     }
 
