--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -45,12 +45,17 @@ server {
         deny all;
     }
 
-    location ~ "(^|/)apps/(dashboard|api|install)(?!/public)(/?)" {
+    location ~ "(^|/)apps/(dashboard|api|auto-install|install)(?!/public)(/?)" {
         return 403;
     }
 
     location ~ "(^|/)apps/main(?!/public|/app/views/themes/[0-9a-zA-Z-_]+/assets)(/?)" {
         return 403;
+    }
+
+    # Auto Installer Assets
+    location ~ "auto-install/assets/(.*)$" {
+        try_files $uri $uri/ /apps/auto-install/public/assets/$1;
     }
 
     # Installer Assets
@@ -81,6 +86,10 @@ server {
     # Theme Assets direct access
     location ~ ^/assets/([0-9a-zA-Z-_]+)/(.+)\.(js|css|png|jpeg|jpg|webp|svg|gif|ico|mp3|mp4|json|ttf|eot|woff|woff2)$ {
         try_files /apps/main/app/views/themes/$1/assets/$2.$3 =404;
+    }
+
+    location /auto-install {
+        try_files $uri $uri/ /apps/auto-install/public/index.php?$query_string;
     }
 
     location /install {
